[package]
name = "exchainge-protocol"
version = "0.1.0"
description = "Solana data licensing and anti-piracy protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "exchainge_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []
custom-heap = []
custom-panic = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
# Official Anchor framework - trusted and verified
anchor-lang = { version = "0.31.1" }
anchor-spl = { version = "0.31.1" }

# Note: SP1 verification happens OFF-CHAIN in the frontend verifier service
# This Anchor program only validates the pre-computed proofs

# Security: Only use these trusted, audited dependencies
# - anchor-lang: Official Anchor framework by Coral, widely audited
# - anchor-spl: Official SPL token integration, security reviewed
# - solana-program: Core Solana runtime, maintained by Solana Labs
# - sp1-verifier: Official SP1 verifier for zero-knowledge proofs
#
# SECURITY NOTE: All dependencies are:
# 1. Officially maintained by Solana/Coral/Succinct teams
# 2. Widely used in production DeFi protocols
# 3. Regular security audits and updates
# 4. Pinned to specific versions to prevent supply chain attacks
