[package]
name = "exchainge-protocol"
version = "0.1.0"
description = "Solana MVP for the ExchAInge data marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "exchainge_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []
custom-heap = []
custom-panic = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# Anchor core framework
anchor-lang = { version = "0.31.1" }
